<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eyes="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include layout="@layout/view_actionbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="5dip"
        android:background="@color/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="18dip"
        android:layout_marginLeft="9dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="18dip"
        android:background="@drawable/bg4"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="21dip"
            android:background="@drawable/bg3"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_left_contact"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginTop="16dip"
                android:background="@drawable/bg5"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dip"
                    android:src="@drawable/eyes" />

                <com.example.eyecontacts.widget.TextViewPlus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dip"
                    android:text="@string/left"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    eyes:textFont="mvboli.ttf" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginTop="9dip"
                android:background="@android:color/white" />

            <TableLayout
                android:id="@+id/layout_left_contact_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="18dip"
                android:layout_marginRight="18dip"
                android:layout_marginTop="19dip" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <com.example.eyecontacts.widget.TextViewPlus
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/date_of_last_change_colon"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        eyes:textFont="mvboli.ttf" />

                    <com.example.eyecontacts.widget.TextViewPlus
                        android:id="@+id/txt_left_eye_last_changed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="04/21/2014"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        eyes:textFont="mvboli.ttf" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip" >

                    <com.example.eyecontacts.widget.TextViewPlus
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:text="@string/change_lense_in"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        eyes:textFont="mvboli.ttf" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/edit_left_eye_remain_days"
                            android:layout_width="wrap_content"
                            android:layout_height="32dip"
                            android:background="@drawable/butt"
                            android:gravity="center"
                            android:inputType="numberSigned"
                            android:text="14"
                            android:textSize="14sp" />

                        <com.example.eyecontacts.widget.TextViewPlus
                            android:id="@+id/txt_title_left_eye_day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dip"
                            android:text="@string/days"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            eyes:textFont="mvboli.ttf" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="7dip"
            android:background="@drawable/bg3"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_right_contact"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginTop="16dip"
                android:background="@drawable/bg5"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dip"
                    android:src="@drawable/eyes" />

                <com.example.eyecontacts.widget.TextViewPlus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dip"
                    android:text="@string/right"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    eyes:textFont="mvboli.ttf" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginTop="9dip"
                android:background="@android:color/white" />

            <TableLayout
                android:id="@+id/layout_right_contact_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="18dip"
                android:layout_marginRight="18dip"
                android:layout_marginTop="19dip"
                android:visibility="gone" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <com.example.eyecontacts.widget.TextViewPlus
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/date_of_last_change_colon"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        eyes:textFont="mvboli.ttf" />

                    <com.example.eyecontacts.widget.TextViewPlus
                        android:id="@+id/txt_right_eye_last_changed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="04/21/2014"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        eyes:textFont="mvboli.ttf" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip" >

                    <com.example.eyecontacts.widget.TextViewPlus
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:text="@string/change_lense_in"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        eyes:textFont="mvboli.ttf" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/edit_right_eye_remain_days"
                            android:layout_width="wrap_content"
                            android:layout_height="32dip"
                            android:background="@drawable/butt"
                            android:gravity="center"
                            android:inputType="numberSigned"
                            android:text="14"
                            android:textSize="14sp" />

                        <com.example.eyecontacts.widget.TextViewPlus
                            android:id="@+id/txt_title_right_eye_day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dip"
                            android:text="@string/days"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            eyes:textFont="mvboli.ttf" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>